--- a/pom.xml
+++ b/pom.xml
@@ -22,5 +22,15 @@
       <artifactId>jtoggl-api</artifactId>
       <version>1.0.3-SNAPSHOT</version>
     </dependency>
+    <dependency>
+      <groupId>org.apache.clerezza</groupId>
+      <artifactId>rdf.core</artifactId>
+      <version>1.0.1</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.clerezza</groupId>
+      <artifactId>rdf.ontologies</artifactId>
+      <version>1.0.0</version>
+    </dependency>
   </dependencies>
 </project>
