--- a/pom.xml
+++ b/pom.xml
@@ -18,10 +18,10 @@
   </properties>
   <dependencies>
     <dependency>
-      <groupId>ch.simas.jtoggl</groupId>
-      <artifactId>jtoggl-api</artifactId>
-      <version>1.0.3-SNAPSHOT</version>
-    </dependency>
+      <groupId>org.glassfish.jersey.core</groupId>
+      <artifactId>jersey-client</artifactId>
+      <version>2.25.1</version>
+    </dependency> 
     <dependency>
       <groupId>org.apache.clerezza</groupId>
       <artifactId>rdf.core</artifactId>
@@ -32,5 +32,15 @@
       <artifactId>rdf.ontologies</artifactId>
       <version>1.0.0</version>
     </dependency>
+    <dependency>
+      <groupId>io.synapta.jarql</groupId>
+      <artifactId>jarql</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
+    <!-- <dependency>
+      <groupId>javax.ws.rs</groupId>
+      <artifactId>javax.ws.rs-api</artifactId>
+      <version>2.0.1</version>
+    </dependency> -->
   </dependencies>
 </project>
