--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,11 @@
     </dependency>
     <dependency>
       <groupId>org.apache.clerezza</groupId>
+      <artifactId>rdf.utils</artifactId>
+      <version>1.0.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.clerezza</groupId>
       <artifactId>rdf.ontologies</artifactId>
       <version>1.0.0</version>
     </dependency>
