--- a/pom.xml
+++ b/pom.xml
@@ -47,5 +47,10 @@
       <artifactId>javax.ws.rs-api</artifactId>
       <version>2.0.1</version>
     </dependency> -->
+    <dependency>
+      <groupId>org.wymiwyg</groupId>
+      <artifactId>wymiwyg-commons-core</artifactId>
+      <version>0.8</version>
+    </dependency>
   </dependencies>
 </project>
